--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="TipoEjercicios" asp-action="Index">Tipo de ejercicios</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="EjerciciosFisicos" asp-action="Index">EjerciciosFisicos</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
