--- a/Views/TipoEjercicios/Index.cshtml
+++ b/Views/TipoEjercicios/Index.cshtml
@@ -9,10 +9,10 @@
 <!-- Button Modal -->
 <div class="mb-2">
     <button type="button" title="Click para Agregar un Ejercicio" class="btn btn-success botonAR" onclick="NuevoRegistro()" data-bs-toggle="modal" data-bs-target="#ModalTipoEjercicio">
-      <i class="bi bi-plus-square iconos" ></i> Agregar Registro
+      <i class="bi bi-plus-square iconosAR" ></i> Agregar Registro
     </button>    
     <button type="button" title="Click para Refrescar la Tabla" onclick="ListadoTipoEjercicios()" class="btn btn-primary botonAR">
-      <i class="bi bi-arrow-clockwise iconos"></i> Refrescar Tabla
+      <i class="bi bi-arrow-clockwise iconosAR"></i> Refrescar Tabla
     </button>
 </div>
 
