--- a/Views/EjerciciosFisicos/Index.cshtml
+++ b/Views/EjerciciosFisicos/Index.cshtml
@@ -38,7 +38,7 @@
             <textarea id="observaciones" name="observaciones" rows="4"></textarea>
         </div>
         <div class="form-group">
-            <button type="submit">Enviar</button>
+            <button id="GuardarEjerciciosFisicos()" type="submit">Enviar</button>
         </div>
     </form>
 </div>
