--- a/Views/EjerciciosFisicos/Index.cshtml
+++ b/Views/EjerciciosFisicos/Index.cshtml
@@ -1,49 +1,83 @@
 @{
-    ViewData["Title"] = "Ejercicios Fisicos";
+  ViewData["Title"] = "Ejercicios Fisicos";
 }
 
 
 <div class="text-center">
-    <h1 class="display-4">Ejercicios Fisicos</h1>
+  <h1 class="display-4">Ejercicios Fisicos</h1>
 </div>
 
-<div class="containerFormEjerciciosFisicos">
-    <form id="FormEjercicioFisico">
-        <div class="form-group">
+<div class="mb-2">
+  <button type="button" title="Click para Agregar un Ejercicio Físico" class="btn btn-success botonAR"
+    onclick="NuevoRegistro()" data-bs-toggle="modal" data-bs-target="#ModalEjercicioFisico">
+    <i class="bi bi-plus-square iconosAR"></i> Agregar Registro
+  </button>
+</div>
+
+
+<div class="modal fade" id="ModalEjercicioFisico" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="ModalTitulo"></h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="FormEjercicioFisico">
+          <div class="dropdown">
+            <label for="selectTipoEjercicio">Seleccione tipo de ejercicio:</label>
+            <select class="form-select" id="selectTipoEjercicio">
+              <!-- Las opciones se cargarán dinámicamente desde JavaScript -->
+            </select>
+          </div>
+          <div class="form-group">
             <label for="inicio">Inicio:</label>
             <input type="datetime-local" id="inicio" name="inicio">
-        </div>
-        <div class="form-group">
+          </div>
+          <div class="form-group">
             <label for="fin">Fin:</label>
             <input type="datetime-local" id="fin" name="fin">
-        </div>
-        <div class="dropdown">
-            <label for="estadoEmocionalIncio">Seleccione estado emocional al inciar:</label>
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Seleccionar
-            </button>
-            <ul class="dropdown-menu" id="estadoEmocionalInicio">
-            </ul>
-        </div>
-        <div class="dropdown">
+          </div>
+          <div class="dropdown">
+            <label for="estadoEmocionalInicio">Seleccione estado emocional al iniciar:</label>
+            <select class="form-select" id="estadoEmocionalInicio"></select>
+          </div>
+          <div class="dropdown">
             <label for="estadoEmocionalFin">Seleccione estado emocional al finalizar:</label>
-            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Seleccionar
-            </button>
-            <ul class="dropdown-menu" id="estadoEmocionalFin">
-            </ul>
-        </div>
-        <div class="form-group">
+            <select class="form-select" id="estadoEmocionalFin">
+              <!-- Las opciones se cargarán dinámicamente desde JavaScript -->
+            </select>
+          </div>
+          <div class="form-group">
             <label for="observaciones">Observaciones:</label>
             <textarea id="observaciones" name="observaciones" rows="4"></textarea>
-        </div>
-        <div class="form-group">
-            <button id="GuardarEjerciciosFisicos()" type="submit">Enviar</button>
-        </div>
-    </form>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" onclick="LimpiarModal()" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" onclick="GuardarEjerciciosFisicos()" class="btn btn-primary" data-bs-dismiss="modal">Guardar</button>
+      </div>
+    </div>
+  </div>
 </div>
 
+<table class="table tablaTipoEjercicios">
+  <thead class="headTabla">
+    <tr>
+      <th>EJERCICIO FÍSICO</th>
+      <th>INICIO</th>
+      <th>FIN</th>
+      <th>ESTADO EMOCIONAL AL FINALIZAR</th>
+      <th>ESTADO EMOCIONAL AL INICIAR</th>
+      <th>OBSERVACIONES</th>
+      <th>EDITAR</th>
+      <th>ELIMINAR</th>
+    </tr>
+  </thead>
+  <tbody class="bodyTabla" id="tbody-ejerciciosfisicos"></tbody>
+</table>
 
 @section Scripts {
-    <script src="~/js/ejerciciosfisicos-1.0.0.js"></script>
+  <script src="~/js/ejerciciosfisicos-1.0.0.js"></script>
 }
