--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
         <i class="fa-solid fa-times" id="cancel"></i>
     </label>
     <div class="sidebar">
-        <header>Logo</header>
+        <header>Sport Control</header>
         <ul class="listaSidebar">
             <li>
                 <a asp-controller="Home" asp-action="Index"><i class="fa-solid fa-house"></i>Home</a>
@@ -63,9 +63,10 @@
             <li>
                 <a asp-controller="EjerciciosFisicos" asp-action="Index"><i class="fa-solid fa-stopwatch-20"></i>Ejercicios Físicos</a>
             </li>
+            <footer>
+                <partial class="login-register" name="_LoginPartial" />
+            </footer>    
         </ul>
-        <partial class="login-reg" name="_LoginPartial" />
-        
     </div>
     
     <div class="container">
