--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -48,6 +48,7 @@ body {
   font-size: 22px;
   color: white;
   text-align: center;
+  padding-right: 25px;
   line-height: 70px;
   background-color: #063146;
   user-select: none;
@@ -70,6 +71,7 @@ body {
 
 .listaSidebar li:hover a{
   padding-left: 45px;
+  background-color: #0c5a7e;
 }
 
 .sidebar ul a i{
@@ -92,7 +94,7 @@ body {
 .labelCheck #open {
   left: 40px;
   top: 25px;
-  font-size: 35px;
+  font-size: 25px;
   color: white;
   padding: 6px 12px;
   transition: all .5s;
@@ -100,9 +102,9 @@ body {
 
 .labelCheck #cancel{
   z-index: 1111;
-  left: -195px;
-  top: 17px;
-  font-size: 30px;
+  left: -210px;
+  top: 20px;
+  font-size: 20px;
   color: #0a5275;
   padding: 4px 9px;
   transition: all .5s ease;
@@ -119,7 +121,7 @@ body {
 }
 
 #check:checked ~ .labelCheck #cancel{
-  left: 195px;
+  left: 200px;
 }
 
 
