8th 08/05 - funcionalidad terminada

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -64,7 +64,7 @@
                 <a asp-controller="EjerciciosFisicos" asp-action="Index"><i class="fa-solid fa-stopwatch-20"></i>Ejercicios Físicos</a>
             </li>
             <footer>
-                <partial class="login-register" name="_LoginPartial" />
+                <partial  name="_LoginPartial" />
             </footer>    
         </ul>
     </div>
