--- a/Views/EjerciciosFisicos/Index.cshtml
+++ b/Views/EjerciciosFisicos/Index.cshtml
@@ -28,11 +28,10 @@
       </div>
       <div class="modal-body">
         <form id="FormEjercicioFisico">
+          <input type="hidden" id="ejercicioFisicoID" value="0">
           <div class="dropdown">
-            <label for="selectTipoEjercicio">Seleccione tipo de ejercicio:</label>
-            <select class="form-select" id="selectTipoEjercicio">
-              <!-- Las opciones se cargarán dinámicamente desde JavaScript -->
-            </select>
+            <label for="TipoEjercicioID">Seleccione tipo de ejercicio:</label>
+            @Html.DropDownList("tipoEjercicioID", null, htmlAttributes: new { @class = "form-control" })
           </div>
           <div class="form-group">
             <label for="inicio">Inicio:</label>
@@ -60,7 +59,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" onclick="LimpiarModal()" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
-        <button type="button" onclick="GuardarEjerciciosFisicos()" class="btn btn-primary">Guardar</button>
+        <button type="button" onclick="GuardarEjerciciosFisicos()" class="btn btn-primary" data-bs-dismiss="modal">Guardar</button>
       </div>
     </div>
   </div>
