--- a/Views/EjerciciosFisicos/Index.cshtml
+++ b/Views/EjerciciosFisicos/Index.cshtml
@@ -2,19 +2,24 @@
   ViewData["Title"] = "Ejercicios Fisicos";
 }
 
+<link rel="stylesheet" href="~/css/ejerciciosFisicos.css">
 
-<div class="text-center">
-  <h1 class="display-4">Ejercicios Fisicos</h1>
-</div>
+
+
+<h1 class="t-stroke t-shadow">EJERCICIOS!</h1>
 
 <div class="mb-2">
-  <button type="button" title="Click para Agregar un Ejercicio Físico" class="btn btn-success botonAR"
+  <button type="button" title="Click para Agregar un Ejercicio Físico" class="buttonAdd"
     onclick="NuevoRegistro()" data-bs-toggle="modal" data-bs-target="#ModalEjercicioFisico">
-    <i class="bi bi-plus-square iconosAR"></i> Agregar Registro
+    <span class="button-content">
+      <i class="bi bi-plus-square iconosAddRefresh"></i> Agregar Registro
+    </span>
   </button>
-  <button type="button" title="Click para Agregar un Ejercicio Físico" class="btn btn-success botonAR"
+  <button type="button" title="Click para Agregar un Ejercicio Físico" class="buttonRefresh"
     onclick="ListadoEjerciciosFisicos()">
-    <i class="bi bi-plus-square iconosAR"></i> Refrescar
+    <span class="button-content">
+      <i class="bi bi-arrow-clockwise iconosAddRefresh"></i> Refrescar
+    </span>
   </button>
 </div>
 
@@ -35,7 +40,7 @@
           </div>
           <div class="form-group">
             <label for="inicio">Inicio:</label>
-            <input type="datetime-local" id="inicio" name="inicio">
+            <input type="datetime-local"  id="inicio" name="inicio">
           </div>
           <div class="form-group">
             <label for="fin">Fin:</label>
@@ -53,7 +58,7 @@
           </div>
           <div class="form-group">
             <label for="observaciones">Observaciones:</label>
-            <textarea id="observaciones" name="observaciones" rows="4"></textarea>
+            <textarea id="observaciones" style="text-transform: uppercase;" name="observaciones" rows="4"></textarea>
           </div>
         </form>
       </div>
