--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<link rel="stylesheet" href="~/css/home.css">
+
+<h1 class="t-stroke t-shadow">WORKOUT WATCH!</h1>
+
+<p class="intro">"Bienvenido a Workout Watch! Tu guía personal para un estilo de vida más activo y saludable. Registra tus
+    entrenamientos, sigue tu progreso y alcanza tus metas fitness con facilidad. Con Workout Watch, cada paso cuenta.
+    ¡Empieza hoy mismo y lleva tu entrenamiento al siguiente nivel!"</p>
