--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -17,10 +17,11 @@
 else
 {
     <li class="nav-item">
-        <a class="login-register" asp-area="Identity" asp-page="/Account/Register">Registrarse</a>
+        <a class="login-register" asp-area="Identity" asp-page="/Account/Register"><i class="fa-regular fa-id-card"></i>Registrarse</a>
     </li>
     <li class="nav-item">
-        <a class="login-register" asp-area="Identity" asp-page="/Account/Login">Ingresar</a>
+        
+        <a class="login-register" asp-area="Identity" asp-page="/Account/Login"><i class="fa-solid fa-right-to-bracket"></i>Ingresar</a>
     </li>
 }
 </ul>
