--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,8 +4,22 @@
 
 <link rel="stylesheet" href="~/css/home.css">
 
+
+
 <h1 class="t-stroke t-shadow">WORKOUT WATCH!</h1>
 
-<p class="intro">"Bienvenido a Workout Watch! Tu guía personal para un estilo de vida más activo y saludable. Registra tus
-    entrenamientos, sigue tu progreso y alcanza tus metas fitness con facilidad. Con Workout Watch, cada paso cuenta.
-    ¡Empieza hoy mismo y lleva tu entrenamiento al siguiente nivel!"</p>
+
+<div class="row">
+  <div class="col-12">
+    <p class="intro">Bienvenido a Workout Watch! Tu guía personal para un estilo de vida más activo y saludable. Registra tus
+    entrenamientos, sigue tu progreso y alcanza tus metas fitness con facilidad. Con Workout Watch!, cada paso cuenta.
+    ¡Empieza hoy mismo y lleva tu entrenamiento al siguiente nivel!</p>
+    <p class="intro2">"Cada día se hace más fácil, pero tienes que hacerlo todos los días, esa es la parte difícil"</p>
+  </div>
+</div>
+
+
+<div class="div-btn">
+  <button class="btn-login-home">Iniciar sesión</button>
+  <button class="btn-register-home">Registrate!</button>
+</div>
