--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -42,8 +42,7 @@
         </nav>
     </header> *@
 
-
-<input type="checkbox" id="check">
+    <input type="checkbox" id="check">
     <label class="labelCheck" for="check">
         <i class="fa-solid fa-bars" id="open"></i>
         <i class="fa-solid fa-times" id="cancel"></i>
@@ -55,7 +54,7 @@
                 <a asp-controller="Home" asp-action="Index"><i class="fa-solid fa-house"></i>Home</a>
             </li>
             <li>
-                <a asp-controller="Home" asp-action="Privacy"><i class="fa-solid fa-lock"></i>Privacy</a>
+                <a ><i class="fa-solid fa-lock"></i>Privacy</a>
             </li>
             <li>
                 <a asp-controller="TipoEjercicios" asp-action="Index"><i class="fa-solid fa-dumbbell"></i>Tipo de Ejercicios</a>
