--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -29,7 +29,7 @@
                     <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </div>
                 <div>
-                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Iniciar Sesión</button>
+                    <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary btn-iniciar-sesion">Iniciar Sesión</button>
                 </div>
                 <div>
                     <p>
