--- a/wwwroot/css/ejerciciosFisicos.css
+++ b/wwwroot/css/ejerciciosFisicos.css
@@ -2,6 +2,7 @@ body{
     background-image: url(../img/Fondo2.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-image: fixed;
 }
 
 
@@ -10,6 +11,7 @@ body{
   text-align: center;
   font-size: 5rem;
   color: transparent;
+  padding-bottom: 2rem;
   -moz-text-stroke-width: 2px;
   -webkit-text-stroke-width: 2px;
   -moz-text-stroke-color: #000000;
@@ -40,6 +42,103 @@ body{
   top: 6px;
   z-index: -1;
   transition: all 0.5s ease;
+}
+
+.modal{
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-dialog{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content{
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: 1px solid white;
+  
+}
+
+.modal-header{
+  background-color: rgba(148, 148, 148, 0.493);
+  color: white;
+  padding-bottom: 20px;
+  font-weight: lighter;
+  font-family: 'Roboto', sans-serif, monospace ;
+}
+
+.btn-close{
+  color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.301);
+}
+
+.modal-footer{
+  background-color: rgba(148, 148, 148, 0.226);
+  color: white;
+  padding-top: 20px;
+}
+
+.form-control{
+  background-color: rgba(148, 148, 148, 0.493);
+  color: rgb(0, 0, 0);
+  text-transform: uppercase;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.form-control:focus-visible{
+  background-color: rgba(148, 148, 148, 0.493);
+  color: rgb(0, 0, 0);
+  text-transform: uppercase;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.form-group{
+  color: rgb(255, 255, 255);
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+.calendario{
+  background-color: rgba(148, 148, 148, 0.493);
+  color: rgb(0, 0, 0);
+  text-transform: uppercase;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.form-select{
+  background-color: rgba(148, 148, 148, 0.493);
+  color: rgb(0, 0, 0);
+  text-transform: uppercase;
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.dropdown{
+  color: rgb(255, 255, 255);
+  text-transform: uppercase;
+}
+
+.textArea{
+  background-color: rgba(148, 148, 148, 0.493);
+  color: rgb(0, 0, 0);
+  text-transform: uppercase;
+  margin-top: 15px;
+  width: 100%; 
+  height: 10vh; 
+}
+
+.btn-cancel{
+  border: 1px solid red;
+  font-size: 18px;
+}
+
+.btn-save{
+  border: 1px solid #0d6efd;
+  font-size: 18px;
 }
 
 .buttonAdd {
