--- a/wwwroot/css/register.css
+++ b/wwwroot/css/register.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../img/FondoLogin-register.jpg);
+    background-image: url(../img/Fondo4.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -9,6 +9,7 @@ body{
     text-align: center;
     font-size: 5rem;
     color: transparent;
+    padding-bottom: 2rem;
     -moz-text-stroke-width: 2px;
     -webkit-text-stroke-width: 2px;
     -moz-text-stroke-color: #000000;
@@ -59,13 +60,6 @@ body{
     background-color: #f0f0f04b; 
 }
 
-.input-user, .input-password :focus{
-    background-color: #f0f0f04b;
-}
-
-.input-user, .input-password :active{
-    background-color: #f0f0f04b;
-}
-.input-user, .input-password :checked{
+.input-user, .input-password :focus-visible{
     background-color: #f0f0f04b;
 }
