11th cambios esteticos

--- a/Views/EjerciciosFisicos/Index.cshtml
+++ b/Views/EjerciciosFisicos/Index.cshtml
@@ -69,14 +69,14 @@
   </div>
 </div>
 
-<table class="table tablaTipoEjercicios">
+<table class="table tablaEjerciciosFisicos">
   <thead class="headTabla">
     <tr>
-      <th>EJERCICIO FÍSICO</th>
+      <th>EJERCICIO</th>
       <th>INICIO</th>
       <th>FIN</th>
-      <th>ESTADO EMOCIONAL AL FINALIZAR</th>
-      <th>ESTADO EMOCIONAL AL INICIAR</th>
+      <th>AL INICIAR:</th>
+      <th>AL FINALIZAR:</th>
       <th>OBSERVACIONES</th>
       <th>EDITAR</th>
       <th>ELIMINAR</th>
