--- a/Views/TipoEjercicios/Index.cshtml
+++ b/Views/TipoEjercicios/Index.cshtml
@@ -42,8 +42,8 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" onclick="LimpiarModal()" class="btn btn-danger" data-bs-dismiss="modal">Cancelar</button>
-        <button type="button" onclick="GuardarRegistro()" class="btn btn-primary">Guardar</button>
+        <button type="button" onclick="LimpiarModal()" class="btn btn-outline-danger" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" onclick="GuardarRegistro()" class="btn btn-outline-primary">Guardar</button>
       </div>
     </div>
   </div>
