--- a/wwwroot/css/register.css
+++ b/wwwroot/css/register.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../img/Fondo4.jpg);
+    background-image: url(../img/Fondo4.png);
     background-size: cover;
     background-repeat: no-repeat;
 }
