--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,6 +20,10 @@
 
 
 <div class="div-btn">
-  <button class="btn-login-home">Iniciar sesión</button>
-  <button class="btn-register-home">Registrate!</button>
+  <button class="btn-login-home">
+    <a asp-area="Identity" asp-page="/Account/Login">Iniciar sesión</a>
+  </button>
+  <button class="btn-register-home">
+    <a  asp-area="Identity" asp-page="/Account/Register">Registrate!</a>
+  </button>
 </div>
