--- a/wwwroot/css/home.css
+++ b/wwwroot/css/home.css
@@ -25,7 +25,7 @@ body{
     content: "WORKOUT WATCH!";
     font-size: 5rem;
     letter-spacing: 0px;
-    background: url(../img/fondoTitulo.jpg) 50% 47%
+    background: url(../img/fondoTitulo2.jpg) 50% 47%
     repeat;
     background-size: 150%;
     -webkit-text-fill-color: transparent;
