--- a/wwwroot/css/ejerciciosFisicos.css
+++ b/wwwroot/css/ejerciciosFisicos.css
@@ -130,6 +130,26 @@ body{
   width: 100%; 
   height: 10vh; 
 }
+.textArea{
+  background-color: rgba(148, 148, 148, 0.493);
+  color: rgb(0, 0, 0);
+  text-transform: uppercase;
+  margin-top: 15px;
+  width: 100%; 
+  height: 10vh; 
+}
+.textArea{
+  background-color: rgba(148, 148, 148, 0.493);
+  color: rgb(0, 0, 0);
+  text-transform: uppercase;
+  margin-top: 15px;
+  width: 100%; 
+  height: 10vh; 
+}
+
+.textArea::placeholder{
+  color: black;
+}
 
 .btn-cancel{
   border: 1px solid red;
