--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,10 +20,10 @@
 
 
 <div class="div-btn">
-  <button class="btn-login-home">
+  <button class="btn-login-home" asp-area="Identity" asp-page="/Account/Login">
     <a asp-area="Identity" asp-page="/Account/Login">Iniciar sesión</a>
   </button>
-  <button class="btn-register-home">
+  <button class="btn-register-home" asp-area="Identity" asp-page="/Account/Register">
     <a  asp-area="Identity" asp-page="/Account/Register">Registrate!</a>
   </button>
 </div>
