--- a/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/Areas/Identity/Pages/Account/Logout.cshtml
@@ -9,13 +9,13 @@
     @{
         if (User.Identity?.IsAuthenticated ?? false)
         {
-            <form class="form-inline" type="submit" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
-                <button type="submit" class="nav-link btn btn-link text-dark">Haga clic aquí para cerrar sesión</button>
+            <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post">
+                <button type="submit" class="nav-link btn btn-link text-dark">Click here to Logout</button>
             </form>
         }
         else
         {
-            <p>Ha cerrado correctamente la sesión de la aplicación.</p>
+            <p>You have successfully logged out of the application.</p>
         }
     }
 </header>
