--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -9,11 +9,11 @@
         <a  class="login-register" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hola @User.Identity?.Name!</a>
     </li>
     <li class="nav-item">
-        <a  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-            <a class="login-register" asp-area="Identity" asp-page="/Account/Logout" type="submit"><i class="fa-solid fa-left-from-bracket">
-                </i>Cerrar sesión
-            </a>
-        </a>
+        <form class="form-inline login-register" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
+            <button type="submit" class="btnLogout">
+                <i class="fa-solid fa-right-to-bracket"></i>Cerrar sesión  
+            </button>
+        </form>
     </li>
 }
 else
