--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -74,6 +74,25 @@ html{
   margin-right: 16px;
 }
 
+.btnLogout{
+  text-decoration: none;
+  background-color: #042331;
+  display: block;
+  width: 100%;
+  line-height: 65px;
+  font-size: 20px;
+  color: white;
+  padding-left: -60px;
+  box-sizing: border-box;
+  border-top: 1px solid white;
+  border-bottom: 1px solid black;
+  transition: .4s;
+}
+
+.btnLogout:hover{
+  padding-left: 45px;
+  background-color: #0c5a7e;
+}
 
 
 #check{
