--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -82,7 +82,7 @@ html{
   line-height: 65px;
   font-size: 20px;
   color: white;
-  padding-left: -60px;
+  padding-right: 150px;
   box-sizing: border-box;
   border-top: 1px solid white;
   border-bottom: 1px solid black;
@@ -92,6 +92,10 @@ html{
 .btnLogout:hover{
   padding-left: 45px;
   background-color: #0c5a7e;
+}
+
+.btnLogout i{
+  margin-right: 16px;
 }
 
 
