--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -62,6 +62,9 @@
             <li>
                 <a asp-controller="EjerciciosFisicos" asp-action="Index"><i class="fa-solid fa-stopwatch-20"></i>Ejercicios Físicos</a>
             </li>
+            <li>
+                <a asp-controller="Seguimiento" asp-action="Informe"></i>Informe</a>
+            </li>
             <footer class="footerSidebar">
                 <partial class="footerSidebar" name="_LoginPartial" />
             </footer>
