--- a/Views/Seguimiento/Index.cshtml
+++ b/Views/Seguimiento/Index.cshtml
@@ -4,99 +4,101 @@
 
 
 <link rel="stylesheet" href="~/css/Seguimiento.css">
+<div>
+  <div class="row">
+    <div class="col-lg-12 col-md-12 col-sm-12">
+      <h1 class="t-stroke t-shadow">SEGUIMIENTO!</h1>
+    </div>
+  </div>
 
-<div class="row">
-  <div class="col-lg-12 col-md-12 col-sm-12">
-    <h1 class="t-stroke t-shadow">SEGUIMIENTO!</h1>
+
+  <div class="row seguimientoContainer">
+    <div class="col-md-4">
+      <div class="row">
+        <div class="card p-0">
+          <div class="card-header">
+            <i class="fa-solid fa-search"></i>Seleccione sus métodos de seguimiento
+          </div>
+
+          <div class="card-body"></div>
+          <div class="row">
+            <div class="col-md-4">
+              <label>EJERCICIO:</label>
+              @Html.DropDownList("TipoEjercicioID", null, htmlAttributes: new { @class = "form-control" })
+            </div>
+            <div class="col-md-4">
+              <label for="MesEjercicioBuscar">MES:</label>
+              <select class="form-control" id="MesEjercicioBuscar" name="MesEjercicioBuscar">
+                <option value="1">Enero</option>
+                <option value="2">Febrero</option>
+                <option value="3">Marzo</option>
+                <option value="4">Abril</option>
+                <option value="5">Mayo</option>
+                <option value="6">Junio</option>
+                <option value="7">Julio</option>
+                <option value="8">Agosto</option>
+                <option value="9">Septiembre</option>
+                <option value="10">Octubre</option>
+                <option value="11">Noviembre</option>
+                <option value="12">Diciembre</option>
+              </select>
+            </div>
+            <div class="col-md-4">
+              <label class="control-label" for="AnioEjercicioBuscar">AÑO:</label>
+              <select class="form-control" id="AnioEjercicioBuscar" name="AnioEjercicioBuscar">
+                <option value="2020">2020</option>
+                <option value="2021">2021</option>
+                <option value="2022">2022</option>
+                <option value="2023">2023</option>
+                <option value="2024">2024</option>
+                <option value="2025">2025</option>
+              </select>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row pt-4">
+        <div class="col-md-12">
+          <div class="card mb-4">
+            <div class="card-header">
+              <i class="fas fa-chart-bar me-1"></i>
+              Tipos de Ejercicios
+            </div>
+            <div class="card-body">
+              <canvas id="graficoTorta"></canvas>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-8">
+      <div class="row">
+        <div class="col-lg-6 col-md-6">
+          <div class="card bg-success text-white mb-2">
+            <div class="card-body" id="totalEjercicios"></div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6">
+          <div class="card bg-danger text-white mb-2">
+            <div class="card-body" id="sinEjercicios"></div>
+          </div>
+        </div>
+        <div class="col-xl-12">
+          <div class="card mb-4">
+            <div class="card-header">
+              <i class="fas fa-chart-area me-1"></i>
+              Ejercicios Físicos por Día
+            </div>
+            <div class="card-body">
+              <canvas id="graficoPorDias"></canvas>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
-
-<div class="row">
-  <div class="col-md-4">
-    <div class="row">
-      <div class="card">
-        <div class="card-header">
-          <i class="fa-solid fa-search"></i>Seleccione sus métodos de seguimiento
-        </div>
-
-        <div class="card-body"></div>
-        <div class="row">
-          <div class="col-md-4">
-            <label>TIPO DE EJERCICIO:</label>
-            @Html.DropDownList("TipoEjercicioID", null, htmlAttributes: new { @class = "form-control" })
-          </div>
-          <div class="col-md-4">
-            <label for="MesEjercicioBuscar">MES:</label>
-            <select class="form-control" id="MesEjercicioBuscar">
-              <option value="1">Enero</option>
-              <option value="2">Febrero</option>
-              <option value="3">Marzo</option>
-              <option value="4">Abril</option>
-              <option value="5" selected>Mayo</option>
-              <option value="6">Junio</option>
-              <option value="7">Julio</option>
-              <option value="8">Agosto</option>
-              <option value="9">Septiembre</option>
-              <option value="10">Octubre</option>
-              <option value="11">Noviembre</option>
-              <option value="12">Diciembre</option>
-            </select>
-          </div>
-          <div class="col-md-4">
-            <label class="control-label" for="AnioEjercicioBuscar">AÑO:</label>
-            <select class="form-control" id="AnioEjercicioBuscar">
-              <option value="2020">2020</option>
-              <option value="2021">2021</option>
-              <option value="2022">2022</option>
-              <option value="2023">2023</option>
-              <option value="2024" selected>2024</option>
-              <option value="2025">2025</option>
-            </select>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row pt-4">
-      <div class="col-md-12">
-        <div class="card mb-4">
-          <div class="card-header">
-            <i class="fas fa-chart-bar me-1"></i>
-            Tipos de Ejercicios
-          </div>
-          <div class="card-body">
-            <canvas id="graficoTorta"></canvas>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="col-md-8">
-    <div class="row">
-      <div class="col-lg-6 col-md-6">
-        <div class="card bg-success text-white mb-2">
-          <div class="card-body" id="totalEjercicios"></div>
-        </div>
-      </div>
-      <div class="col-lg-6 col-md-6">
-        <div class="card bg-danger text-white mb-2">
-          <div class="card-body" id="sinEjercicios"></div>
-        </div>
-      </div>
-      <div class="col-xl-12">
-        <div class="card mb-4">
-          <div class="card-header">
-            <i class="fas fa-chart-area me-1"></i>
-            Ejercicios Físicos por Día
-          </div>
-          <div class="card-body">
-            <canvas id="graficoPorDias"></canvas>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 
 
