--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -60,10 +60,13 @@
                 <a asp-controller="TipoEjercicios" asp-action="Index"><i class="fa-solid fa-dumbbell"></i>Tipo de Ejercicios</a>
             </li>
             <li>
+                <a asp-controller="Lugares" asp-action="Index">Lugares</a>
+            </li>
+            <li>
                 <a asp-controller="EjerciciosFisicos" asp-action="Index"><i class="fa-solid fa-stopwatch-20"></i>Ejercicios Físicos</a>
             </li>
             <li>
-                <a asp-controller="Seguimiento" asp-action="Informe"></i>Informe</a>
+                <a asp-controller="Seguimiento" asp-action="Informe">Informe</a>
             </li>
             <footer class="footerSidebar">
                 <partial class="footerSidebar" name="_LoginPartial" />
